Add common logging utility and refactor dependencies for modularization